omskrivning av relaterat arbete

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -238,7 +238,9 @@ The last test is a quantitative test to see how well the server detection perfor
 \section{Related work}
 
 \subsection{Visual acuity charts}
-Several different versions of visual acuity chart exist today. The ETDRS (Early Treatment Diabetic Retinopathy Study) chart is the most commonly used today and is an improvement to the older \textit{Snellen chart}(fig. \ref{fig:snellen_chart1}, page \pageref{fig:snellen_chart1}). The ETDRS chart was designed and developed by Ferris et al \cite{Ferris}, based on the work of Bailey and Lovie \cite{Bailey}. 
+%Several different versions of visual acuity chart exist today. The ETDRS (Early Treatment Diabetic Retinopathy Study) chart~(fig.~\ref{fig:etdrs_chart1}) is the most commonly used today and is an improvement to the older \textit{Snellen chart}(fig. \ref{fig:snellen_chart1}, page \pageref{fig:snellen_chart1}). The ETDRS chart was designed and developed by Ferris et al \cite{Ferris}, based on the work of Bailey and Lovie \cite{Bailey}. 
+
+Several different versions of visual acuity chart exist today. The ETDRS (Early Treatment Diabetic Retinopathy Study) chart~(fig.~\ref{fig:etdrs_chart1}, page \pageref{fig:etdrs_chart1}) is used at Uppsala Univeristy Hospital today and many other places around the world, and is an improvement to the older \textit{Snellen chart}(fig. \ref{fig:snellen_chart1}, page \pageref{fig:snellen_chart1}). The ETDRS chart was designed and developed by Ferris et al \cite{Ferris}, based on the work of Bailey and Lovie \cite{Bailey}. The Snellen chart design is the most used design globally, but the ETDRS design has been rising in popularity since it has an increased testing accuracy because of its more legible font and because it has the same number of letters on each row.
 
 %\begin{figure}[ht!]
 %\centering
@@ -248,10 +250,12 @@ Several different versions of visual acuity chart exist today. The ETDRS (Early 
 
 
 \subsection{Digital visual acuity charts}
-Digital Eye Chart \cite{digitaleyechart} and iChartPlus \cite{ichartplus} are two applications supposed to display a visual acuity chart on a digital screen. Both applications are computer applications, which requires the computer to be connected to the screen. The companies behind the products provide very little information and the exact specifications of the charts are not available.
+%Digital Eye Chart \cite{digitaleyechart} and iChartPlus \cite{ichartplus} are two applications supposed to display a visual acuity chart on a digital screen. Both applications are computer applications, which requires the computer to be connected to the screen. The companies behind the products provide very little information and the exact specifications of the charts are not available.
+
+There are several other commercial applications that display visual acuity charts on digital screens, for example Digital Eye Chart \cite{digitaleyechart} and iChartPlus \cite{ichartplus}. Most of these alternatives are computer applications which require the computer it runs on to be connected to the screen the chart will be displayed on. Both Digital Eye Chart and iCharPlus, like many other of the commercial applications, provide a remote control that can switch charts and other features. The difference between these systems and this project is in using a tablet computer as a remote, allowing a visual interface with touch controls that connects with the screen and server wirelessly instead of with a video cable. A visual interface allows more types of interactions than a remote control and also allows us to show values and information on the tablet held by the optimetrist instead of on the screen, removing clutter that might distract the patient.
 
 \subsection{Media streaming devices}
-Several media streaming devices exists that allow digital content to be received and displayed on a connected screen. Examples of such devices are Chromecast \cite{chromecast} and Apple TV \cite{appletv} which you can plug into a TV and allows you to view images or watch movies that are stored on your phone or computer. Both applications also allows developers to develop their own applications to display custom content but requires the developer to enter an agreement with respective company.
+Several media streaming devices exists that allow digital content to be received and displayed on a connected screen. Examples of such devices are Chromecast \cite{chromecast} and Apple TV \cite{appletv} which you can plug into a TV and allows you to view images or watch movies that are stored on your phone or computer. Both applications also allows developers to develop their own applications to display custom content but requires the developer to enter an agreement with respective company. Both these services allow you to mirror the screen of your tablet or phone to the TV screen, and could be used to display an eye chart. However, unless the screen on your tablet and the screen on your TV have the same resolution the image will be sretched or resized, reducing the quality of the image. If the screen is mirrored there is also a lot of network traffic needed to stream the screen over to the Chromecast or Apple TV, putting a strain on the tablet's battery life. The server in our project's solution displays the charts which are stored  on the server, minimizing the need for network traffic while working at the screens resolution without stretching or resizing.
 
 
 %There exists today several companies that have taken on the task of digitalizing the usage of eye charts.
