Källor i Visual Acuity Testing

--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -6,6 +6,22 @@
   Year = {2003}
 }
 
+@book{Acuity_Book,
+  Author = {McGraw, H.},
+  Title = {Clinical Procedures for the Ocular Examination},
+  Edition = {3d Edition},
+  Publisher = {Carlson & Kurtz},
+  Year = {2004}
+}
+
+@book{Optics_Book,
+  Author = {Hecht, E.},
+  Title = {Optics},
+  Edition = {4th Edition},
+  Publisher = {Addison-Wesley},
+  Year = {2002}
+}
+
 @online{AndroidSVG,
   	author = {paul.leb...@gmail.com},
   	title = {AndroidSVG},
