--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -255,7 +255,7 @@ Several different versions of visual acuity chart exist today. The ETDRS (Early 
 There are several other commercial applications that display visual acuity charts on digital screens, for example Digital Eye Chart \cite{digitaleyechart} and iChartPlus \cite{ichartplus}. Most of these alternatives are computer applications which require the computer it runs on to be connected to the screen the chart will be displayed on. Both Digital Eye Chart and iCharPlus, like many other of the commercial applications, provide a remote control that can switch charts and other features. The difference between these systems and this project is in using a tablet computer as a remote, allowing a visual interface with touch controls that connects with the screen and server wirelessly instead of with a video cable. A visual interface allows more types of interactions than a remote control and also allows us to show values and information on the tablet held by the optimetrist instead of on the screen, removing clutter that might distract the patient.
 
 \subsection{Media streaming devices}
-Several media streaming devices exists that allow digital content to be received and displayed on a connected screen. Examples of such devices are Chromecast \cite{chromecast} and Apple TV \cite{appletv} which you can plug into a TV and allows you to view images or watch movies that are stored on your phone or computer. Both applications also allows developers to develop their own applications to display custom content but requires the developer to enter an agreement with respective company. Both these services allow you to mirror the screen of your tablet or phone to the TV screen, and could be used to display an eye chart. However, unless the screen on your tablet and the screen on your TV have the same resolution the image will be sretched or resized, reducing the quality of the image. If the screen is mirrored there is also a lot of network traffic needed to stream the screen over to the Chromecast or Apple TV, putting a strain on the tablet's battery life. The server in our project's solution displays the charts which are stored  on the server, minimizing the need for network traffic while working at the screens resolution without stretching or resizing.
+Several media streaming devices exists that allow digital content to be received and displayed on a connected screen. Examples of such devices are Chromecast \cite{chromecast} and Apple TV \cite{appletv} which you can plug into a TV and allows you to view images or watch movies that are stored on your phone or computer. Both applications also allows developers to develop their own applications to display custom content but requires the developer to enter an agreement with respective company. Both these services allow you to mirror the screen of your tablet or phone to the TV screen, and could be used to display an eye chart. However, unless the screen on your tablet and the screen on your TV have the same resolution the image will be stretched or resized, reducing the quality of the image. If the screen is mirrored there is also a lot of network traffic needed to stream the screen over to the Chromecast or Apple TV, putting a strain on the tablet's battery life. The server in our project's solution displays the charts which are stored  on the server, minimizing the need for network traffic while working at the screens resolution without stretching or resizing.
 
 
 %There exists today several companies that have taken on the task of digitalizing the usage of eye charts.
