--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -680,7 +680,7 @@ The server application is in many ways very similar to the Android application. 
 The four tests presented in section \ref{sec:evaluation} were performed in order to find major faults with the system. All tests are considered to have met the requirements, though the usability could still be improved by making it more clear on how and where swipes can be performed.
 
 \subsection{Developer walkthrough}
-During the developer walkthrough of the system, all charts versions were found and all settings were usable on every chart by using table \ref{tab:test1}. The connection settings were also reachable from everywhere in the application and both connecting and reconnecting was working properly.
+During the developer walkthrough (see section \ref{sec:evaluation}) of the system, all charts versions were found and all settings were usable on every chart by using table \ref{tab:test1_empty}. The connection settings were also reachable from everywhere in the application and both connecting and reconnecting was working properly.
 
 \begin{table}[ht!]
 \centering
@@ -705,7 +705,7 @@ Icons Random		&	\checkmark	&	\checkmark	&	\checkmark	&	\checkmark	\\
 Connection			&	\checkmark	&	\checkmark	&	\checkmark	&	\\
 \hline\hline
 \end{tabular}
-\caption{Result of the developer walkthrough. \label{tab:test1}}
+\caption{Result of the developer walkthrough. A checkmark is placed in every area were a specific chart or connection setting has been reached.\label{tab:test1}}
 \end{table}
 
 \newpage
