fixat optotype sizes

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -710,7 +710,7 @@ Connection			&	\checkmark	&	\checkmark	&	\checkmark	&	\\
 
 \newpage
 \subsection{Optotype Sizes}
-The optotype sizes were calculated for and measured on a 15.6 inch computer screen and a 37 inch TV, both with 1920x1080 resolution. As the TV is larger than the computer screen, and have the same resolution, each pixel is bigger and thus, the calculated size in pixels is smaller (table. \ref{tab:optotype_test}). The height in centimeters, rounded to two decimals, are both equal to the expected height and the test is considered successful.
+The optotype sizes were calculated for and measured on a 15.6 inch computer screen and a 37 inch TV, both with 1920x1080 resolution. The size and resolution of the screens were hardcoded into the server before the tests were performed. As the TV is larger than the computer screen, and have the same resolution, each pixel is bigger and thus, the calculated size in pixels is smaller (table. \ref{tab:optotype_test}). The height in centimeters, rounded to two decimals, are both equal to the expected height and the test is considered successful.
 
 
 \begin{table}[ht!]
@@ -736,7 +736,7 @@ The optotype sizes were calculated for and measured on a 15.6 inch computer scre
 								14	&	8 	& 	0.15	& 	3	&	0.15	&	0.15\\
 										\hline
 \end{tabular}
-\caption{Height of optotypes for a 15.6 and 37 inch screen, both with a 1920x1080 resolution. The rightmost column displays the expected height of the optotypes in cm} \label{tab:optotype_test}
+\caption{Height of optotypes for a 15.6 and 37 inch screen, both with a 1920x1080 resolution with a distance setting of 200cm. The rightmost column displays the expected height of the optotypes in cm} \label{tab:optotype_test}
 \end{table}
 
 
