--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -741,7 +741,11 @@ The optotype sizes were calculated for and measured on a 15.6 inch computer scre
 
 
 \subsection{Usability}
-The systems usability was tested with the help of two persons with no previous background related to visual acuity charts or eye examinations. After a brief explanation to the different types of charts they where asked to follow the procedures in \ref{app:usability}. Both persons had no problem performing any of the tasks with the exception of one of them didn't realize that you had to swipe the screen in order to switch between the upper and lower charts in the application.
+The system usability was tested with the help of two persons with no previous background related to visual acuity charts or eye examinations. Since the system is only a prototype and the test is focused  usability, two test persons with no previous knowledge about visual acuity was enough to get an overview of the systems usability.
+
+After a brief explanation to the different types of charts the test persons where asked to follow the procedures in \ref{app:usability}. None of the persons had no problem performing any of the tasks with the exception of one of them didn't realize that you had to swipe the screen in order to switch between the upper and lower charts in the application. This is not a major problem since it can easily be solved by an explanation or tutorial before using the application.
+
+
 
 \subsection{Server Detection}
 The server detection test was done 3 times on a stable WiFi network. According to the results (Table. \ref{tab:server_detection_test}), every single one of the tests performed was successful in finding a server over 90\% of the time. The average success rate of the 3 tests was about 96.3\% which means that the server detection requirements are met.
@@ -767,7 +771,7 @@ Even though the system fulfills the requirements, it doesn't mean it's bug free.
 \chapter{ Conclusion}
 
 \section{Discussion}
-Even though the system turned out as intended, there is a lot left to do until it can be used clinically. First of all, the system must be tested for more bugs and unintended behavior. This should preferably be done by users other than the developers since the developers know how the system works and can't safely predict what another user will attempt to do. Then, after all found bugs have been removed, the system must be tested by experts in the field of ophthalmology in order to make sure that the built system actually is a valid solution. This will also give credibility to the system.
+Even though the system turned out as intended, there are things left to do before it can be used clinically. First of all, the system must be tested for more bugs and unintended behavior. This should preferably be done by users other than the developers since the developers know how the system works and can't safely predict what another user will attempt to do. The system must be tested by experts in the field of ophthalmology in order to make sure that the built system actually is a valid solution. This will give the system credibility and make it possible to use it clinically.
 
 \section{Advantages of a digital system}
 The advantages of a digital system is the ability to change the layout, optotypes and size of the chart without having to manually exchange charts. This will save both time and space as only one screen and a small Android device is necessary, while also providing easier access to specialized charts that will help patients with different needs. This system will also allow the visual acuity tests to take place in rooms that previously where too small, as the system will display optotypes at a size suitable for the distance the patient is from the monitor.
