--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -777,7 +777,7 @@ Even though the system turned out as intended, there are things left to do befor
 The advantages of a digital system is the ability to change the layout, optotypes and size of the chart without having to manually exchange charts. This will save both time and space as only one screen, a small server and a small Android device is necessary, while also providing easier access to specialized charts that will help patients with different needs. This system will also allow the visual acuity tests to take place in rooms that previously where too small, as the system will display optotypes at a size suitable for the distance the patient is from the monitor.
 
 \section{Disadvantages of a digital system}
-A disadvantage with this system is that digital screens become very expensive at large sizes, which limits the maximum distance a patient can sit from the screen. Another disadvantage is that the resolution, or rather pixel density, will limit how close to a screen a patient can sit without the optotypes looking pixelated. Pixel density is a measurement of how many pixels (dots) can fit in a small section of the screen, usually denoted as Pixels Per Inch (PPI) or Dots Per Inch (DPI). The higher the DPI is the better the quality of small details will be. This is very important when rendering type fonts because the edges should be as smooth as possible.
+A disadvantage with this system is that digital screens become very expensive at large sizes, a 40 inch LED TV, for example, can cost above 3500 SEK as of 30/8-2015 according to Elgiganten. The screen size limits the maximum distance a patient can watch the screen and the patient should preferably sit at least 4 meters away from screen \cite{PGSoderbergOral}. Another disadvantage is that the resolution, or rather pixel density, will limit how close to a screen a patient can sit without the optotypes looking pixelated which will make it harder to read the optotype and result in an incorrect result from the test \cite{PGSoderbergOral}. Pixel density is a measurement of how many pixels (dots) can fit in a small section of the screen, usually denoted as Pixels Per Inch (PPI) or Dots Per Inch (DPI). The higher the DPI is the better the quality of small details will be and the optotype will appear less pixelated.
 
 \section{Alternative solutions}
 A possible alternative solution to a custom server running on a Raspberry Pi or other computer use a Chromecast instead. This could simplify the system for the user as this would make the Android application work similar to the many media streaming applications that exists today. Using a Chromecast would also make sure the user only have to worry about the Android application as the Chromecast is just a plug and play unit maintained by Google. The disadvantages to this is, as mentioned earlier, that an agreement with Google have to be signed. The application would also require an internet connection, opposed the the current system which only need a local network.
