Fixat alternative solutions

--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -10,7 +10,7 @@
   Author = {McGraw, H.},
   Title = {Clinical Procedures for the Ocular Examination},
   Edition = {3d Edition},
-  Publisher = {Carlson & Kurtz},
+  Publisher = {Carlson \& Kurtz},
   Year = {2004}
 }
 
@@ -155,6 +155,15 @@ year = {2015}
   	url = {http://developer.android.com/guide/topics/ui/index.html},
   	note = {visited on 2015-05-19}
 }
+
+@online{android_receiver_app,
+	author= {{Google, Inc}},
+	title = {Receiver Applications},
+  	year = 2015,
+  	url = {https://developers.google.com/cast/docs/receiver\_apps},
+  	note = {visited on 2015-08-30}
+}
+
 
 
 
