--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -780,7 +780,7 @@ The advantages of a digital system is the ability to change the layout, optotype
 A disadvantage with this system is that digital screens become very expensive at large sizes, a 40 inch LED TV, for example, can cost above 3500 SEK as of 30/8-2015 according to Elgiganten. The screen size limits the maximum distance a patient can watch the screen and the patient should preferably sit at least 4 meters away from screen \cite{PGSoderbergOral}. Another disadvantage is that the resolution, or rather pixel density, will limit how close to a screen a patient can sit without the optotypes looking pixelated which will make it harder to read the optotype and result in an incorrect result from the test \cite{PGSoderbergOral}. Pixel density is a measurement of how many pixels (dots) can fit in a small section of the screen, usually denoted as Pixels Per Inch (PPI) or Dots Per Inch (DPI). The higher the DPI is the better the quality of small details will be and the optotype will appear less pixelated.
 
 \section{Alternative solutions}
-A possible alternative solution to a custom server running on a Raspberry Pi or other computer use a Chromecast instead. This could simplify the system for the user as this would make the Android application work similar to the many media streaming applications that exists today. Using a Chromecast would also make sure the user only have to worry about the Android application as the Chromecast is just a plug and play unit maintained by Google. The disadvantages to this is, as mentioned earlier, that an agreement with Google have to be signed. The application would also require an internet connection, opposed the the current system which only need a local network.
+A possible alternative solution to a custom server running on a Raspberry Pi or other computer would be to use a Chromecast instead. This could simplify the system for the user as this would make the Android application work similar to the many media streaming applications that exists today. Using a Chromecast would also make sure the user only have to worry about the Android application as the Chromecast is just a plug and play unit maintained by Google. A disadvantage to this is that the developer is required to have a Google developers account which costs a small sum of money (5\$ as of August 2015). This might not be a large sum of money but it was decided to be left for future exploration. Another disadvantage of using the Chromecast is that the application would need an internet connection instead of just a local network. Although screen mirroring is possible, the logical solution to create this system would be to use the Chromecasts \textit{Custom Media Receiver} which requires a webbapp located on the internet \cite{android_receiver_app}.
 
 \section{Future Work}
 Future work will include more charts and features for the system. One such feature is the grating acuity test, which allows testing of visual acuity on very young children or people with difficulties communicating \cite{PGSoderbergOral}. Another feature is to include the option to, instead of changing the size of the optotypes, change the LogMAR, so the top row doesn't necessarily start at 1.0 LogMAR. This will allow the chart to use the entire monitors screen no matter the distance from the patient to the screen.
